--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -v -u github.com/mitchellh/gox
-      - run: /go/bin/gox -output="builds/{{.Dir}}_{{.OS}}_{{.Arch}}"
+      - run: /go/bin/gox -output='builds/{{.Dir}}_{{.OS}}_{{.Arch}}'
 
       - store_artifacts:
         path: /builds
@@ -40,7 +40,7 @@ workflows:
   version: 2
   main:
     jobs:
-      - build:
+      - build
       - publish-github-release:
           requires:
             - build
