--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,19 @@ jobs:
     steps:
       - checkout
 
-      # specify any bash command here prefixed with `run: `
-      - run: go get -v -u github.com/mitchellh/gox
-      - run: /go/bin/gox -output='builds/{{.Dir}}_{{.OS}}_{{.Arch}}'
+      - run:
+        name: "Download gox"
+        command: |
+          go get -v -u github.com/mitchellh/gox
+
+      - run:
+        name: "Run gox"
+        command: |
+          /go/bin/gox -output='builds/{{.Dir}}_{{.OS}}_{{.Arch}}'
 
       - store_artifacts:
         path: /builds
-      
+
       - persist_to_workspace:
         root: /go/src/{{REPO_NAME}}
         paths:
